--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Navigation Toggle</title>
-  <link rel="icon" href="logo.jpg" type="image/x-icon" />
+  <title>DHANAWANTARI Blood-Request</title>
+  <link id='icon'rel="icon" href="DHANAVANTARI.png" type="image/x-icon" />
 
   <!-- Materialize CSS -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css" rel="stylesheet"/>
@@ -17,7 +17,7 @@
   <!-- Hamburger Menu -->
   <div class="cl">
     <span id="but" class="sidenav-trigger" data-target="mobile-nav">&#9776;</span>
-    <span id="name">BLOOD</span>
+    <span id="name">DHANAVANTARI</span>
   </div>
 
   <!-- Side Nav -->
