--- a/index.html
+++ b/index.html
@@ -39,79 +39,101 @@
     </section>
 
     <section>
-      <h2>Why Donate?</h2>
-      <p>Your donation can save up to three lives. Blood is always in demand, and your help ensures a steady supply for medical treatments.</p>
+      <h2>Why This Site</h2>
+      <p>This site is dedicated to providing quick and reliable access to blood donors in times of critical need.
+Whether it’s an emergency, a scheduled surgery, or a life-threatening situation, we aim to connect patients and hospitals with willing blood donors as fast as possible. Our mission is to save lives by creating a responsive, trusted platform where those in urgent need can find help within minutes. By bringing together a community of regular and first-time donors, we make every drop count.
+
+ </p>
     </section>
 
     <section>
-      <h2 style="text-align: center;">Units available</h2>
+      <h2 style="text-align: center;">Select Your Blood Group</h2>
       <div class="row" id="blood-groups">
         <!-- Blood boxes -->
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">A+<br><span class="count" data-target="25">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">A+<br><span class="count" data-target="25">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">A-<br><span class="count" data-target="18">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">A-<br><span class="count" data-target="18">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">B+<br><span class="count" data-target="30">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">B+<br><span class="count" data-target="30">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">B-<br><span class="count" data-target="10">0</span> units</div>
+            <div class="card-content"onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">B-<br><span class="count" data-target="10">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">AB+<br><span class="count" data-target="15">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">AB+<br><span class="count" data-target="15">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">AB-<br><span class="count" data-target="8">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">AB-<br><span class="count" data-target="8">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">O+<br><span class="count" data-target="40">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">O+<br><span class="count" data-target="40">0</span> units</div>
           </div>
         </div>
         <div class="col s12 m6">
           <div class="card red darken-2 white-text center-align blood-box blood">
-            <div class="card-content">O-<br><span class="count" data-target="5">0</span> units</div>
+            <div class="card-content" onclick="window.location.href='https://uppundaadithya.github.io/SUBMIT/';" style="cursor: pointer;">O-<br><span class="count" data-target="5">0</span> units</div>
           </div>
         </div>
       </div>
          </section>
  <p id="notFound" style="display:none; color: rgb(255, 255, 255); text-align: center; font-size: 1.5rem;">No matching blood group found.</p>
-
-    <section id="form"> </section>
-      <script src="form.js"></script>
-      
-   
-
+<section style="text-align: center;">
+  <h2>How to Submit</h2>
+  <p>Enter the pecient name </p>
+  <p>Enter the bloob groupe properly </p>
+  <p style="text-align: center;">AND</p>
+  <P>fill all sections and submit</P>
+</section>
     <section>
       <h2>FAQs</h2>
       <div>
         <h3>Need Help?</h3>
         <p>We're available 24/7 for urgent requests.</p>
-        <a href="contact.html">Contact Now</a>
+       <a href="tel:+91762989627">Contact</a>
       </div>
     </section>
 
   
   </div>
-  <footer>
-      <h2>Get Involved</h2>
+ <footer>
+  <div class="footer-content">
+    <div class="footer-about">
+      <h3>About Us</h3>
+      <p>
+        We are committed to connecting those in need with life-saving blood donations. 
+        Your support helps us save lives every day.
+      </p>
+    </div>
+
+    <div class="footer-get-involved">
+      <h3>Get Involved</h3>
       <p>Join our community and become a regular donor.</p>
       <a href="contact.html" id="btn">Contact Us</a>
-    </footer>
+    </div>
+
+    <div class="footer-contact">
+      <h3>Contact</h3>
+      <p>Email us at: <a href="mailto:support@example.com">support@example.com</a></p>
+    </div>
+  </div>
+</footer>
+
   <!-- Scripts -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -156,7 +178,7 @@
       const contact = document.getElementById("contact").value;
       const message = document.getElementById("message").value;
 
-      doc.setFontSize(16);
+      doc.setFontSize(1);
       doc.text("Blood Request Form", 20, 20);
       doc.setFontSize(12);
       doc.text(`Date: ${now.toLocaleDateString()} ${now.toLocaleTimeString()}`, 20, 30);
