--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 
   <!-- Side Nav -->
   <ul id="mobile-nav" class="sidenav">
-    <li><a href="#!">Menu</a></li>
-    <li><a href="#!">Service</a></li>
-    <li><a href="#!">Contact</a></li>
-    <li><a href="#!">About</a></li>
+    <li><a href="#name">Menu</a></li>
+    <li><a href="#blood-groups">Service</a></li>
+    <li><a href="#contact">Contact</a></li>
+    <li><a href="#about">About</a></li>
   </ul>
 
   <div id="cont">
@@ -93,15 +93,15 @@ Whether it’s an emergency, a scheduled surgery, or a life-threatening situatio
       </div>
          </section>
  <p id="notFound" style="display:none; color: rgb(255, 255, 255); text-align: center; font-size: 1.5rem;">No matching blood group found.</p>
-<section style="text-align: center;">
+<section style="text-align:left;">
   <h2>How to Submit</h2>
-  <p>Enter the pecient name </p>
-  <p>Enter the bloob groupe properly </p>
+  <p> <b>step 1 :</b>Enter the pecient name </p>
+  <p> <b>step 2 :</b>Enter the bloob groupe properly </p>
   <p style="text-align: center;">AND</p>
   <P>fill all sections and submit</P>
 </section>
     <section>
-      <h2>FAQs</h2>
+      <h2 id="contact">FAQs</h2>
       <div>
         <h3>Need Help?</h3>
         <p>We're available 24/7 for urgent requests.</p>
@@ -111,7 +111,7 @@ Whether it’s an emergency, a scheduled surgery, or a life-threatening situatio
 
   
   </div>
- <footer>
+ <footer id="about">
   <div class="footer-content">
     <div class="footer-about">
       <h3>About Us</h3>
