--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ Whether it’s an emergency, a scheduled surgery, or a life-threatening situatio
  <p id="notFound" style="display:none; color: rgb(255, 255, 255); text-align: center; font-size: 1.5rem;">No matching blood group found.</p>
 <section style="text-align:left;">
   <h2>How to Submit</h2>
-  <p> <b>step 1 :</b>Enter the pecient name </p>
-  <p> <b>step 2 :</b>Enter the bloob groupe properly </p>
+  <p> <b>step 1 :</b>Enter the patient name </p>
+  <p> <b>step 2 :</b>Enter the blood group properly </p>
   <p style="text-align: center;">AND</p>
   <P>fill all sections and submit</P>
 </section>
